# barrett_model

./: CHANGELOG.rst  README.md  package.xml
materials/: barrett.material
models/: arm.urdf.xacro  ball.urdf.xacro  common.urdf.xacro  components.urdf.xacro  hand.urdf.xacro  unused.urdf.xacro  wam_top.urdf.xacro
models/sw_meshes/: base_link.STL  base_link_fine.stl  elbow_link.STL  elbow_link_fine.stl  forearm_link.STL  forearm_link_convex_decomposition.blend  forearm_link_convex_decomposition.dae  forearm_link_fine.stl  shoulder_link.STL  shoulder_link_convex_decomposition.blend  shoulder_link_convex_decomposition.dae  shoulder_link_fine.STL  shoulder_pitch_link_fine.STL  upper_arm_link.STL  upper_arm_link_convex_decomposition.blend  upper_arm_link_convex_decomposition.dae  upper_arm_link_fine.stl  wrist_palm_link.STL  wrist_palm_link_convex.dae  wrist_palm_link_fine.STL  wrist_pitch_link.STL  wrist_pitch_link_convex_decomposition.blend  wrist_pitch_link_convex_decomposition.dae  wrist_pitch_link_fine.STL  wrist_yaw_link.STL  wrist_yaw_link_convex_decomposition.blend  wrist_yaw_link_convex_decomposition.dae  wrist_yaw_link_fine.stl
models/sw_meshes/bhand/: bhand_finger_dist_link_fine.stl  bhand_finger_med_link_fine.STL  bhand_finger_prox_link_convex_decomposition.blend  bhand_finger_prox_link_fine.stl  (+4 more)
robots/: barrett.urdf.xacro  bhand.urdf.xacro  wam4.urdf.xacro  wam4_stump.urdf.xacro  wam7.urdf.xacro  wam7_bhand.urdf.xacro  wam_4dof_wam.urdf.xacro  wam_7dof_2x.urdf.xacro  wam_7dof_wam.urdf.xacro  wam_7dof_wam_bhand.urdf.xacro
wam_cad/: B2124_2.SLDPRT
